bin/style.css
body {
    background: #405080;
	color: white;
	font: 15px sans-serif;
}
a, a:visited {
	color: #4FD;
}
#mods > header {
	font-size: 150%;
	border-bottom: 1px solid currentColor;
}
#intro {
	padding-bottom: 0.5em;
}
#mods > section {
	display: flex;
	flex-wrap: wrap;
}
#mods > section.pad {
	margin: 0.5em 0;
}
#mods > section > section {
	position: relative;
	margin: 4px;
}
section.branch {
	width: 112px;
	height: 160px;
}
.hex {
	position: absolute;
	clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
	transition: filter ease-in-out 0.2s;
}
.hex:hover {
	filter: brightness(125%);
}
section.branch .hex:nth-child(1) {
	left: 28px;
	top: 0;
}
section.branch .hex:nth-child(2) {
	left: 0px;
	top: 47px;
}
section.branch .hex:nth-child(3) {
	left: 56px;
	top: 47px;
}
section.branch .hex:nth-child(4) {
	left: 28px;
	top: 94px;
}
section.super, section.super-text {
	width: 112px;
	height: 111px;
}
section.super .hex:nth-child(1) {
	left: 0px;
	top: 0px;
}
section.super .hex:nth-child(2) {
	left: 56px;
	top: 0px;
}
section.super .hex:nth-child(3), section.super-text .hex {
	left: 28px;
	top: 47px;
}
section.super-text .text {
	display: flex;
	width: 112px;
	height: 47px;
	text-align: center;
	flex-direction: column;
	justify-content: center;
}
#mods section.single {
	width: 56px;
	height: 64px;
}
.tippy-box {
	background-color: rgba(0, 0, 0, 0.8);
}
.tippy-box ul {
	padding-left: 20px;
	margin: 0.5em 0;
	list-style-type: "◈ ";
}
.hextag, input[type="button"] {
	display: inline-block;
	margin-right: 0.3em;
	padding: 0.4em 0.4em;
	background: rgba(0, 0, 0, 0.5);
	color: white;
	border: 0;
	opacity: 1;
	transition: all ease-in-out 0.2s;
	cursor: default;
}
.hextag:hover, input[type="button"]:hover {
	background: white;
	color: black;
}
input[type="button"] {
	cursor: pointer;
}
.hex {
	display: flex;
	flex-direction: column;
	justify-content: center;
}
.hex[checked]:before {
	content: "bok";
	width: 100%;
	height: 100%;
	background: white;
	clip-path: polygon(0% 0%, 50% 0%, 50% 10%, 10% 30%, 10% 70%, 50% 90%, 90% 70%, 90% 30%, 50% 10%, 50% 0%, 100% 0%, 100% 100%, 0% 100%);
}
input[type="text"] {
	background: rgba(0, 0, 0, 0.5);
	padding: 0.4em 0.4em;
	color: white;
	border: 0;
	width: 15em;
}
input[type="range"] {
	vertical-align: top;
	width: 250px;
}

